src/components/header/Header.css
header {
    height: 110vh;
    padding-top: 7rem;
}

.header__container {
    text-align: center;
    height: 50%;
    position: relative;
}

/* CTA (CALL TO ACTION BTNS) */

/* flex to get some space tween */
.cta {
    margin-top: 2.5rem;
    display: flex;
    gap: 1.2rem;
    justify-content: center;
}

/* PERSONAL IMAGE */
.header__block__diagram {
    background: linear-gradient(var(--color-primary), transparent);
    width: 60rem;
    height: 35rem; /* originally 30 */
    margin-top: 4rem;
    border-radius: 6rem 6rem 0 0; /*top left, top right, bot left, bot right*/
    padding: 5rem 1.5rem 1.5rem 1.5rem;
    position: absolute;
    left: calc(50% - 30rem);
}

/* SCROLL DOWN */
.scroll__down__right, .scroll__down__left{
    position: absolute;
    bottom: 1rem;
    transform: rotate(90deg);
    font-weight: 300;
    font-size: 0.9rem;
    color: rgba(0, 0, 0, 0.726);
}

.scroll__down__right:hover, .scroll__down__left:hover{
    color: rgba(0, 0, 0, 0.301);
}

.scroll__down__right {
    right: -2.3rem;
}

.scroll__down__left {
    left: -2.3rem;
}

/* MEDIA QUERIES (MEDIUM DEVICES)  */

/* For tablets */
@media screen and (max-width: 1024px) {
    header {
        height: 40vh;  /* height: 68vh; */ /* vh = viewport height*/
    }

    .header__block__diagram, .scroll__down__right, .scroll__down__left {
        display: none;
    }
}

/* For phones - don't display icons */
@media screen and (max-width: 600px) {
    header {
        height: 50vh; /*100vh;*/
    }

   .scroll__down__right, .header__block__diagram, .scroll__down__left {
        display: none;
    }
}

